2.99 Gimp.ProcedureConfig image parameter should be nullable, but Python: TypeError: Argument 1 does not allow None as a value
Docs generated from .gir, in the "description" field says NULL is allowed.
I looked at the code libgimp/gimpprocedureconfig.c. I think it is a GI annotation error, the 'image' parameter should be annotated NULLABLE (sic, not the proper syntax.) IOW the annotation field disagrees with the description field.
AFAIK, there is no test case. None of goat_exercise.py or other shipped python plugins use Gimp.ProcedureConfig, yet. And most plugins would likely pass an image.
I am reporting it so it doesn't fall through the cracks.