Add some missing (nullable) annotations

Fixes https://gitlab.gnome.org/GNOME/gimp/-/issues/4750